# backend-telegram-shop

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 71ac1c6f7c76_create.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  cart.py  categories.py  heatlh.py  orders.py  payments.py  products.py  reviews.py  roles.py  shops.py  telegram.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: ___init__.py  base.py  cart.py  category.py  order.py  payment.py  product.py  review.py  shop.py  user.py
backend/app/db/: base.py  init_db.py  init_roles.py
backend/app/models/: cart.py  category.py  order.py  payment.py  product.py  review.py  shop.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  cart.py  category.py  order.py  payment.py  product.py  review.py  shop.py  user.py
backend/app/services/: payment_service.py  telegram_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_webhooks.py
backend/tests/integration/test_api/: test_auth.py  test_shops.py
backend/tests/unit/: test_security.py
backend/tests/unit/test_crud/: test_services.py  test_shop.py  test_user.py
backend/tests/unit/test_services/: test_payment_service.py
docker/backend/: Dockerfile  ci-cd.yml  docker-build.yml  security-scan.yml  tests.yml
scripts/: backup.py  init_db.py  setup_bot.py
