[tool.poetry]
name = "telegram-shop-backend"
version = "0.1.0"
description = "Backend for Telegram WebApps Shop Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
pillow = "^10.0.1"
tenacity = "^8.2.3"
celery = "^5.3.4"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
